# choiny

./: .gitignore  Cargo.toml  Dockerfile  Gopkg.toml  README.md  azure-choiny.yaml  choiny.go
dba/: cosmos.go  middleware.go
main/: choiny.go
service/: map.go
src/: main.rs
