[package]
name = "choiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.28.0"
futures = "0.3"
bson = {version = "2.6.1", features = []}
mongodb = {version = "2.5.0", features = []}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.24"
